working on registration and login

--- a/view/static/scss/bootstrap/_carousel.scss
+++ b/view/static/scss/bootstrap/_carousel.scss
@@ -121,7 +121,7 @@
   }
 }
 
-// Icons for within
+// icon for within
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
