--- a/view/static/fontweb/less/_rotated-flipped.less
+++ b/view/static/fontweb/less/_rotated-flipped.less
@@ -1,4 +1,4 @@
-// Rotated & Flipped Icons
+// Rotated & Flipped icon
 // -------------------------
 
 .@{fa-css-prefix}-rotate-90  { .fa-icon-rotate(90deg, 1);  }
