--- a/view/static/css/style.css
+++ b/view/static/css/style.css
@@ -9777,3 +9777,7 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+a {
+  text-decoration: none;
+}
+
